# SPDX-FileCopyrightText: 2022 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
members = ["packages/http_tor/native/*", "packages/tor/native/*", "packages/ur/native/*", "packages/wallet/native/*"]
exclude = ["ditto/ditto-to-arb"]

[profile.release]
lto = true
codegen-units = 1
debug = true