# SPDX-FileCopyrightText: 2022 Foundation Devices Inc.
#
# SPDX-License-Identifier: GPL-3.0-or-later

[workspace]
resolver = "2"
members = [
    "packages/http_tor/rust",
    "packages/ur/native/*",
    "packages/backup/native/*",
    "packages/bluart/rust",
    "packages/shards/rust", 
    "packages/foundation_api/rust",
    "packages/ngwallet/rust"
]
exclude = ["passport2/extmod/foundation-rust"]

[workspace.dependencies]

[patch.crates-io]
pqcrypto-traits = { git = "https://github.com/icota/pqcrypto", branch = "aarch64-feature-detection" }
pqcrypto-mldsa = { git = "https://github.com/icota/pqcrypto", branch = "aarch64-feature-detection" }
pqcrypto-mlkem = { git = "https://github.com/icota/pqcrypto", branch = "aarch64-feature-detection" }

[profile.release]
lto = true
codegen-units = 1
debug = true
incremental = true
